syntax = "proto3";

package command;

message Command {
  enum Type {
    COMMAND_TYPE_DB_EXECUTE = 0;
    COMMAND_TYPE_JOB_QUEUE = 1;
    COMMAND_TYPE_COMMIT_LOCAL_DATA = 2;
    COMMAND_TYPE_STOP_JOBS = 3;
    COMMAND_TYPE_RECOVER_JOBS = 4;
  }
  Type type = 1;
  string sql = 2;
  bytes args = 3;
  bytes data = 4;
  uint64 target_node = 5;
}